--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.18",
     "@mantine/hooks": "^6.0.18",
+    "@tanstack/react-query": "^4.32.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
