- Zustand has been implemented to manage the modal state

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mantine/hooks": "^6.0.18",
     "@tanstack/react-query": "^4.32.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
