--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.18",
+    "@mantine/form": "^6.0.18",
     "@mantine/hooks": "^6.0.18",
     "@tanstack/react-query": "^4.32.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "zod": "^3.21.4",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
