--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^6.0.18",
     "@mantine/hooks": "^6.0.18",
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.21.4",
